--- a/src/index.css
+++ b/src/index.css
@@ -66,3 +66,143 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+#timer-alert {
+  color:red
+}
+.draw-feature {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 50vh;
+  background: linear-gradient(
+    135deg,
+    #ff9a9e 0%,
+    #fad0c4 30%,
+    #fbc2eb 60%,
+    #a18cd1 100%
+  );
+  border-radius: 7px;
+  width: 900px;
+}
+.container{
+  display: flex;
+  width: 80%;
+}
+.tools-board{
+  width: 210px;
+  padding: 15px 22px 0;
+}
+.tools-board .row{
+  margin-bottom: 20px;
+}
+.row .options{
+  list-style: none;
+  margin: 10px 0 0 0;
+}
+.row .options .option{
+  display: flex;
+  cursor: pointer;
+  align-items: center;
+  margin-bottom: 3px;
+}
+.option:is(:hover, .active) .icon{
+  filter: invert(17%) sepia(90%) saturate(3000%) hue-rotate(900deg) brightness(100%) contrast(100%);
+}
+.option :where(span, label){
+  padding-left: 7px;
+  cursor: pointer;
+}
+.option:is(:hover, .active) :where(span, label){
+  color:cornflowerblue;
+}
+.option #fill-color{
+  cursor: pointer;
+  height: 14px;
+  width: 90px;
+}
+.option #size-slider{
+  width: 80%;
+  height: 5px;
+  margin-top: 10px;
+}
+.colors .options{
+  display: flex;
+  justify-content: space-around;
+  padding-left: 0;
+}
+.colors .option{
+  height: 20px;
+  width: 20px;
+  border-radius: 50%;
+  margin-top: 3px;
+  position: relative;
+}
+.colors .option:nth-child(1){
+  background-color: white;
+  border: 1.5px solid gray;
+}
+.colors .option:nth-child(2){
+  background-color: black;
+}
+.colors .option:nth-child(3){
+  background-color: red;
+}
+.colors .option:nth-child(4){
+  background-color: rgb(4, 133, 4);
+}
+.colors .option:nth-child(5){
+  background-color: blue;
+}
+.colors .option.selected::before{
+  position: absolute;
+  content:"";
+  top: 50%;
+  left: 50%;
+  height: 12px;
+  width: 12px;
+  background: inherit;
+  border-radius: inherit;
+  border: 2px solid white;
+  transform: translate(-50%, -50%);
+}
+.colors .option:first-child.selected::before{
+  background-color:rgb(230, 226, 226);
+}
+.option #color-picker{
+  opacity: 0;
+  cursor: pointer;
+}
+.buttons button{
+  width: 75%;
+  color: white;
+  border: none;
+  outline: none;
+  padding: 8px 0;
+  font-size: 0.9rem;
+  margin: 0 0 13px 7%;
+  background: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+.buttons .clear-canvas{
+  color: grey;
+  border: 1px solid grey;
+  transition: all 0.3s ease;
+}
+.clear-canvas:hover{
+  color: white;
+  background-color: lightsteelblue;
+}
+.buttons .save-img{
+  background-color:#662af2;
+  border: 1px solid #3201a2;
+}
+.container> #canvas:nth-child(2){
+  flex:1;
+  background-color: white;
+}
+#canvas canvas{
+  width:100%;
+  height: 100%;
+}
