--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,54 @@
+@import url(https://fonts.googleapis.com/css2?family=Frijole&display=swap
+);
+@import url(https://fonts.googleapis.com/css?family=Rancho&effect=shadow-multiple);
+
+h1 {
+  font-family: "frijole";
+  color:/* #725ffe, */ #534ad4;
+  text-shadow: -5px #11101b;
+  margin: 15px 10px 20px;
+}
+.navigation-flex {
+  display: flex;
+  gap: 200px;
+  border-top: 5px dotted #534ad4;;
+  border-bottom: 5px dotted #534ad4;
+  padding: 10px 15px;
+}
+.nav-link {
+  color: rgb(221, 240, 253);
+  font-weight: 600;
+}
+body {
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(0deg, #3826dc,#d17bd9);
+}
+.homepage {
+  border-radius: 10px;
+  box-shadow: 0 0 20px 8px #77648e;
+  margin: 50px auto 50px;
+  align-content: center;
+  width: 50%;
+  text-align: center;
+  min-width: 300px;
+  background-color:  rgba(255, 255, 255, .5);
+  padding: 0 20px;
+}
+.homepage button {
+  background-color: #3826dc;
+  box-shadow: 5px 5px 10px 1px rgb(107, 6, 231);
+  color:#fbecff;
+  border: ;
+
+}
+.homepage h2, h3 {
+  color: rgb(107, 6, 231);
+}
+
+.homepage p {
+  color:#8912b0
+}
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
