--- a/src/index.css
+++ b/src/index.css
@@ -20,9 +20,13 @@ h1 {
   font-weight: 600;
 }
 body {
+  /* margin: 0;
+  position: fixed; */
   width: 100%;
   height: 100%;
   background: linear-gradient(0deg, #3826dc,#d17bd9);
+  min-width: 320px;
+  min-height: 100vh;
 }
 .homepage {
   border-radius: 10px;
@@ -72,14 +76,6 @@ a:hover {
   color: #535bf2;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
@@ -116,29 +112,24 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
-
+.play-container {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: center;
+  gap: 20px;
+  width: 70%;
+  border-radius: 10px;
+  box-shadow: 0 0 20px 8px #77648e;
+  margin: 50px auto 50px;
+  align-content: center;
+  min-width: 300px;
+  background-color:  rgba(255, 255, 255, .5);
+  padding: 20px 0;
+}
 #timer-alert {
   color:red
 }
-.draw-feature {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  min-height: 50vh;
-  background: linear-gradient(
-    135deg,
-    #ff9a9e 0%,
-    #fad0c4 30%,
-    #fbc2eb 60%,
-    #a18cd1 100%
-  );
-  border-radius: 7px;
-  width: 900px;
-}
-.container{
-  display: flex;
-  width: 80%;
-}
+
 .tools-board{
   width: 210px;
   padding: 15px 22px 0;
@@ -248,11 +239,7 @@ button:focus-visible {
   background-color:#662af2;
   border: 1px solid #3201a2;
 }
-.container> #canvas:nth-child(2){
-  flex:1;
+
+canvas {
   background-color: white;
-}
-#canvas canvas{
-  width:100%;
-  height: 100%;
 }
