--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,16 @@ h1 {
   color:/* #725ffe, */ #534ad4;
   text-shadow: -5px #11101b;
   margin: 15px 10px 20px;
+  font-size: 2.5em;
+}
+h2 {
+  font-family: 'Poetsen One';
+  font-size: xx-large;
+}
+
+h3 {
+  font-family: 'Poetsen One';
+  font-size: large;
 }
 .navigation-flex {
   display: flex;
@@ -20,8 +30,8 @@ h1 {
   font-weight: 600;
 }
 body {
-  /* margin: 0;
-  position: fixed; */
+  /* margin: 0; */
+  position: relative;
   width: 100%;
   height: 100%;
   background: linear-gradient(0deg, #3826dc,#d17bd9);
@@ -39,12 +49,7 @@ body {
   background-color:  rgba(255, 255, 255, .5);
   padding: 0 20px;
 }
-.homepage button {
-  background-color: #3826dc;
-  box-shadow: 5px 5px 10px 1px rgb(107, 6, 231);
-  color:#fbecff;
 
-}
 .homepage h2, h3 {
   color: rgb(107, 6, 231);
 }
@@ -56,10 +61,6 @@ body {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -76,49 +77,32 @@ a:hover {
   color: #535bf2;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
 button {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
+  background-color: #3826dc;
+  box-shadow: 5px 5px 10px 1px rgb(107, 6, 231);
+  color:#fbecff;
 }
 button:hover {
   border-color: #646cff;
 }
 button:focus,
 button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  outline: 4px auto #241b7b;;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-}
 #prompt {
 text-align: center;
 margin-bottom: 5px;
 }
 #topic {
 text-align: center;
-font-family: 'Poetsen One';
 font-size: xx-large;
 margin: 5px;
 color: rgb(168, 195, 234);
@@ -227,27 +211,24 @@ color: rgb(168, 195, 234);
 }
 .buttons button{
   width: 75%;
-  color: white;
-  border: none;
-  outline: none;
   padding: 8px 0;
   font-size: 0.9rem;
-  margin: 0 0 13px 7%;
-  background: none;
-  border-radius: 5px;
-  cursor: pointer;
+  margin: 0 0 20px 7%;
+}
+.buttons button:hover{
+  border-color: #646cff;
 }
 .buttons .clear-canvas{
-  color: grey;
+  color: #3826dc;
   border: 1px solid grey;
   transition: all 0.3s ease;
+  background-color: rgb(155, 189, 238);
 }
 .clear-canvas:hover{
   color: white;
   background-color: lightsteelblue;
 }
 .buttons .save-img{
-  background-color:#662af2;
   border: 1px solid #3201a2;
 }
 
