switched save img button to change topic

--- a/src/index.css
+++ b/src/index.css
@@ -262,7 +262,7 @@ color: rgb(168, 195, 234);
   background-color: lightsteelblue;
 }
 
-.buttons .save-img{
+.buttons .change-topic{
   border: 1px solid #3201a2;
 }
 
