--- a/src/index.css
+++ b/src/index.css
@@ -131,6 +131,12 @@ color: rgb(168, 195, 234);
   background-color:  rgba(255, 255, 255, .5);
   padding: 20px 0;
 }
+.timer {
+  text-align: center;
+  font-family: 'Poetsen One';
+  font-size: 32px ;
+  color: rgb(168, 195, 234);
+}
 
 #timer-alert {
   color:red
