--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 
 h1 {
   font-family: "frijole";
-  color:/* #725ffe, */ #534ad4;
+  color: #534ad4;
   text-shadow: -5px #11101b;
   margin: 15px 40px 20px;
   font-size: 2.5em;
@@ -106,15 +106,15 @@ button:focus-visible {
 }
 
 #prompt {
-text-align: center;
-margin-bottom: 5px;
+  text-align: center;
+  margin-bottom: 5px;
 }
 
 #topic {
-text-align: center;
-font-size: xx-large;
-margin: 5px;
-color: rgb(168, 195, 234);
+  text-align: center;
+  font-size: xx-large;
+  margin: 5px;
+  color: rgb(168, 195, 234);
 }
 
 .play-container {
@@ -131,6 +131,7 @@ color: rgb(168, 195, 234);
   background-color:  rgba(255, 255, 255, .5);
   padding: 20px 0;
 }
+
 .timer {
   text-align: center;
   font-family: 'Poetsen One';
@@ -308,6 +309,7 @@ form {
   min-width: 300px;
   background-color:  rgba(255, 255, 255, .5);
   padding: 20px 30px 50px;
+  margin-top: 50px;
 }
 
 form h2 {
@@ -320,10 +322,10 @@ form label, form input{
 }
 
 form label {
-margin-left: 150px;
-width: 100px;
-font-size: large;
-font-weight: bolder;
+  margin-left: 150px;
+  width: 100px;
+  font-size: large;
+  font-weight: bolder;
 }
 
 form input {
@@ -345,4 +347,14 @@ input[type=password] {
 form button {
   width: 200px;
   margin: auto;
+}
+
+.auth-redirect-wrap {
+  text-align: center;
+}
+
+.auth-redirect {
+  color:#d4b4e9;
+  font-weight: bold;
+  font-size: large;
 }
