--- a/src/index.css
+++ b/src/index.css
@@ -358,3 +358,39 @@ form button {
   font-weight: bold;
   font-size: large;
 }
+
+.results-heading {
+  margin: 30px 40px 0;
+  text-align: center;
+}
+
+.results {
+  color: rgb(107, 6, 231);
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  width: 40%;
+  border-radius: 10px;
+  box-shadow: 0 0 20px 8px #77648e;
+  margin: 20px auto 50px;
+  min-width: 300px;
+  background-color:  rgba(255, 255, 255, .5);
+  padding: 20px 30px 50px;
+  align-items: center;
+}
+
+.results h2 {
+  margin: auto;
+}
+
+#correct {
+  color: rgb(186, 240, 243);
+  font-size: xx-large;
+  letter-spacing: 1.5px;
+  margin: auto;
+}
+
+.wrong-results {
+  padding: 0px 50px 10px 58px;
+  margin: auto;
+}
