--- a/src/index.css
+++ b/src/index.css
@@ -51,7 +51,7 @@ body {
   text-align: center;
   min-width: 700px;
   background-color:  rgba(255, 255, 255, .5);
-  padding: 0 20px;
+  padding: 0 20px 30px 20px;
 }
 
 .homepage h2, h3 {
@@ -62,6 +62,10 @@ body {
   color:#8912b0
 }
 
+#guesser-demo {
+  width: 650px;
+  height: 500px;
+}
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
